# webtek-grader

./: .gitignore  Cargo.toml  README.md  release.sh
src/: extract.rs  grade.rs  main.rs  pdf.rs  schemas.rs  unzip.rs  validate.rs
