[package]
name = "webtek-grader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
zip = "0.5.13"
tar = "0.4.41"
unrar = "0.5.3"
async-recursion = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
openai-api-rs = "5.0.5"
dotenv = "0.15.0"