[package]
name = "webtek-grader"
version = "2.2.3"
edition = "2021"
description = "Aids in the process of extracting student deliverables, and leverages GPT to generate a proposal for the student feedback."
license = "MIT"
authors = ["magnusrodseth"]
homepage = "https://github.com/magnusrodseth/webtek-grader"
keywords = ['cli', 'gpt', 'zip', 'tar', 'unrar']
readme = "README.md"
repository = "https://github.com/magnusrodseth/webtek-grader"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
zip = "0.5.13"
tar = "0.4.41"
unrar = "0.5.3"
async-recursion = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
openai-api-rs = "5.0.5"
dotenv = "0.15.0"
pdf-extract = "0.7.9"
walkdir = "2.5.0"